Change name of favorite-things.html file to index.html, fix table spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ ul{
 img{
   width: 100%;
   height: 300px;
+  display: block;
 }
 
 table{
